--- a/1-prime-time/Cargo.toml
+++ b/1-prime-time/Cargo.toml
@@ -11,4 +11,5 @@ log = "0.4.17"
 pretty_env_logger = "0.4.0"
 tokio = {version = "1.21", features = ["full"] }
 bytes = "1.2"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.85"
