--- a/1-prime-time/Cargo.toml
+++ b/1-prime-time/Cargo.toml
@@ -7,9 +7,10 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.64"
-log = "0.4.17"
-pretty_env_logger = "0.4.0"
-tokio = {version = "1.21", features = ["full"] }
 bytes = "1.2"
+log = "0.4.17"
+num-bigint = { version = "0.4.3", features = ["serde"] }
+pretty_env_logger = "0.4.0"
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0.85"
+serde_json = { version = "1.0.85", features = ["arbitrary_precision"] }
+tokio = { version = "1.21", features = ["full"] }
