--- a/1-prime-time/Cargo.toml
+++ b/1-prime-time/Cargo.toml
@@ -10,6 +10,7 @@ anyhow = "1.0.64"
 bytes = "1.2"
 log = "0.4.17"
 num-bigint = { version = "0.4.3", features = ["serde"] }
+num-traits = "0.2.15"
 pretty_env_logger = "0.4.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0.85", features = ["arbitrary_precision"] }
