--- a/6-speed-daemon/Cargo.toml
+++ b/6-speed-daemon/Cargo.toml
@@ -11,6 +11,7 @@ async-channel = "1.7.1"
 bytes = "1.2.1"
 clap = { version = "4.0.18", features = ["derive"] }
 clap-verbosity-flag = "2.0.0"
-env_logger = "0.9.1"
 log = "0.4.17"
 tokio = { version = "1.21.2", features = ["full"] }
+tracing = "0.1.37"
+tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
