--- a/6-speed-daemon/Cargo.toml
+++ b/6-speed-daemon/Cargo.toml
@@ -12,6 +12,9 @@ bytes = "1.2.1"
 clap = { version = "4.0.18", features = ["derive"] }
 clap-verbosity-flag = "2.0.0"
 log = "0.4.17"
+opentelemetry = "0.18.0"
+opentelemetry-jaeger = "0.17.0"
 tokio = { version = "1.21.2", features = ["full"] }
 tracing = "0.1.37"
+tracing-opentelemetry = "0.18.0"
 tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
